Keyframed Principled Shader "Alpha" Values in older files get mapped to "Emission Strength" in 2.91 #81580

Closed
opened 2020-10-09 16:20:34 +02:00 by Constantin Kormann · 8 comments

System Information
Operating system: WIn10 64bit
Graphics card: GTX 1080 + RTX 2080s

Blender Version
Broken: 2.91 Alpha after b248ec9776
Worked: 2.90.1 and before b248ec9776

Short description of error
Keyframed "Alpha" values in Principled Shader get mapped to "Emission Strength" when the file is opened in 2.91 Alpha, thus breaking the shaders.
Note: Only happens with keyframed values. Non-keyframed values get transferred fine.

Old 2.90.1 File:
2.90.JPG

Same File opened in 2.91 Alpha:
2.91.JPG

Exact steps for others to reproduce the error

  1. Open Blender 2.90.1 or earlier, keyframe "Alpha" Value on default cube
  2. Save
  3. Open in 2.91 Alpha
  4. Wrong Value in "Emission Strength" can be found.
**System Information** Operating system: WIn10 64bit Graphics card: GTX 1080 + RTX 2080s **Blender Version** Broken: 2.91 Alpha after b248ec9776 Worked: 2.90.1 and before b248ec9776 **Short description of error** Keyframed "Alpha" values in Principled Shader get mapped to "Emission Strength" when the file is opened in 2.91 Alpha, thus breaking the shaders. Note: Only happens with keyframed values. Non-keyframed values get transferred fine. Old 2.90.1 File: ![2.90.JPG](https://archive.blender.org/developer/F8971362/2.90.JPG) Same File opened in 2.91 Alpha: ![2.91.JPG](https://archive.blender.org/developer/F8971364/2.91.JPG) **Exact steps for others to reproduce the error** 1. Open Blender 2.90.1 or earlier, keyframe "Alpha" Value on default cube 2. Save 3. Open in 2.91 Alpha 4. Wrong Value in "Emission Strength" can be found.

Added subscriber: @constantin.kormann

Added subscriber: @constantin.kormann
Constantin Kormann changed title from Keyframed "Alpha" Values get mapped to "Emission Strength" in 2.91 to Keyframed "Alpha" Values in older files get mapped to "Emission Strength" in 2.91 2020-10-09 16:21:52 +02:00
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Setting to High as it is a recent commit that caused this issue.
Caused by b248ec9776

Alpha_keyframed_2.83.7.blend

Setting to High as it is a recent commit that caused this issue. Caused by b248ec9776 [Alpha_keyframed_2.83.7.blend](https://archive.blender.org/developer/F8971655/Alpha_keyframed_2.83.7.blend)
Evan Wilson changed title from Keyframed "Alpha" Values in older files get mapped to "Emission Strength" in 2.91 to Keyframed Principled Shader "Alpha" Values in older files get mapped to "Emission Strength" in 2.91 2020-10-09 18:07:24 +02:00
Member

Not sure which module to tag this under, since it effects several.

Not sure which module to tag this under, since it effects several.
Dalai Felinto self-assigned this 2020-10-15 11:34:14 +02:00

This issue was referenced by c866075dfb

This issue was referenced by c866075dfbd90888705ad5cd68b25d8605febb4a

Tagging as animation since the issue is easier to be tackled/understood by the animation module.

Tagging as animation since the issue is easier to be tackled/understood by the animation module.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81580
No description provided.